AM-52: reset password policy settings